[gd_scene load_steps=11 format=3 uid="uid://dst4548djl7pe"]

[ext_resource type="Texture2D" uid="uid://cmxync65tyucb" path="res://assets/temp-dialogue-box-export-4x.png" id="1_5ea71"]
[ext_resource type="Script" path="res://scenes/manager/constellation_ui_window/constellation_ui_window.gd" id="1_hk6wu"]
[ext_resource type="Theme" uid="uid://c2ovrb67ifx60" path="res://assets/dialogues/dialogue_balloons/dialogue_theme.tres" id="2_cvxww"]
[ext_resource type="StyleBox" uid="uid://dsya07qjk1g74" path="res://assets/dialogues/dialogue_balloons/button_tex.tres" id="3_bebcn"]
[ext_resource type="FontFile" uid="uid://dn5vvdt0pfq1m" path="res://assets/dialogues/dialogue_balloons/font_file_dialogue.tres" id="4_lnjdq"]
[ext_resource type="Texture2D" uid="uid://4aicsrqjanhf" path="res://assets/temp-dial-button-4y.png" id="6_rmk0n"]
[ext_resource type="Texture2D" uid="uid://b2646622qkt2k" path="res://assets/temp-dial-button-pressed-4x.png" id="7_o6dwq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uvvwp"]
texture = ExtResource("6_rmk0n")
texture_margin_left = 24.0
texture_margin_top = 24.0
texture_margin_right = 24.0
texture_margin_bottom = 24.0
modulate_color = Color(1.5, 1.5, 1.5, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kgnji"]
texture = ExtResource("7_o6dwq")
texture_margin_left = 24.0
texture_margin_top = 24.0
texture_margin_right = 24.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qbrfa"]

[node name="ConstellationUIWindow" type="CanvasLayer"]
script = ExtResource("1_hk6wu")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = 13.0
offset_right = -19.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5ea71")
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 60

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_cvxww")
text = "Constellation"

[node name="ConstellationName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_cvxww")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Leo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FriendsMade" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_cvxww")
theme_override_font_sizes/font_size = 18
text = "x / y Friends Made
"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 100)
layout_mode = 2
mouse_filter = 2

[node name="Line2D" type="Line2D" parent="MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
width = 1.0
default_color = Color(1, 1, 1, 0.588235)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_force_pass_scroll_events = false
theme_override_fonts/font = ExtResource("4_lnjdq")
theme_override_styles/normal = ExtResource("3_bebcn")
theme_override_styles/hover = SubResource("StyleBoxTexture_uvvwp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_kgnji")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qbrfa")
text = "Continue your journey"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/Button" to="." method="_on_button_pressed"]
